--- a/lib_ross/Cargo.toml
+++ b/lib_ross/Cargo.toml
@@ -5,11 +5,12 @@ authors = ["Parsa Ghadimi <qti3eqti3e@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+serde = { version="1.0.117", features=["derive"] }
+chrono = { version="0.4.19", features=["serde"] }
+rpds = { version = "0.8.0", features = ["serde"] }
 rocksdb = "0.15.0"
 crossbeam = "0.8.0"
-serde = { version="1.0.117", features=["derive"] }
 serde_json = "1.0.59"
-chrono = { version="0.4.19", features=["serde"] }
 bincode = "1.3.1"
 lfu = "0.2.5"
 sha-1 = "0.9.2"
