--- a/ross_core/Cargo.toml
+++ b/ross_core/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lib_ross"
+name = "ross_core"
 version = "0.1.0"
 authors = ["Parsa Ghadimi <qti3eqti3e@gmail.com>"]
 edition = "2018"
