--- a/ross_compiler/src/gen/client/core/tsconfig.json
+++ b/ross_compiler/src/gen/client/core/tsconfig.json
@@ -3,7 +3,8 @@
         "target": "es6",
         "module": "CommonJS",
         "declaration": true,
-        "outDir": "dist"
+        "outDir": "dist",
+        "removeComments": true
     },
     "include": ["*.ts"]
 }
