--- a/ross_compiler/src/gen/client/core/package.json
+++ b/ross_compiler/src/gen/client/core/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "build": "rollup -c rollup.config.js"
+  },
   "devDependencies": {
+    "@wessberg/rollup-plugin-ts": "^1.3.8",
+    "rollup": "^2.34.2",
     "tslib": "^2.0.3",
     "typescript": "^4.1.2"
   }
