--- a/ross_compiler/src/gen/client/core/tsconfig.json
+++ b/ross_compiler/src/gen/client/core/tsconfig.json
@@ -3,8 +3,7 @@
         "target": "es6",
         "module": "CommonJS",
         "declaration": true,
-        "outDir": "dist",
-        "removeComments": true
+        "outDir": "dist"
     },
-    "include": ["*.ts"]
+    "include": ["src/**/*.ts"]
 }
