core.js: Implement `i` function

--- a/ross_compiler/src/gen/client/core/tsconfig.json
+++ b/ross_compiler/src/gen/client/core/tsconfig.json
@@ -4,7 +4,8 @@
         "module": "CommonJS",
         "declaration": true,
         "outDir": "dist",
-        "stripInternal": true
+        "stripInternal": true,
+        "lib": ["ES2017", "DOM"]
     },
     "include": ["src/**/*.ts"]
 }
