--- a/ross_compiler/src/gen/client/core/package.json
+++ b/ross_compiler/src/gen/client/core/package.json
@@ -11,5 +11,9 @@
     "rollup": "^2.34.2",
     "tslib": "^2.0.3",
     "typescript": "^4.1.2"
+  },
+  "dependencies": {
+    "axios": "^0.21.0",
+    "socket.io-client": "^3.0.4"
   }
 }
