--- a/ross_core/Cargo.toml
+++ b/ross_core/Cargo.toml
@@ -1,14 +1,10 @@
 [package]
-name = "ross"
+name = "ross_core"
 version = "0.1.0"
-authors = ["Parsa Ghadimi <qti3eqti3e@gmail.com>"]
+authors = ["Parsa Ghadimi <me@qti3e.com>"]
 edition = "2018"
 
 [dependencies]
-# Actix
-actix = "0.10.0"
-actix-web = "3.3.1"
-actix-web-actors = "3.0.0"
 # Core deps
 serde = { version="1.0.117", features=["derive"] }
 chrono = { version="0.4.19", features=["serde"] }
@@ -20,3 +16,4 @@ lfu = "0.2.5"
 sha-1 = "0.9.2"
 md5 = "0.7.0"
 rand = "0.7"
+
